@@ -39,51 +39,57 @@ class Tortuga_Pro_Header_Bar {
 	 */
 	static function display_header_bar() {
 
-		echo '<div id="header-bar" class="header-bar container clearfix">';
+		// Check if there are menus.
+		if ( has_nav_menu( 'social' ) or has_nav_menu( 'secondary' ) ) {
 
-		// Check if there is a social menu.
-		if ( has_nav_menu( 'social' ) ) {
+			echo '<div id="header-top" class="header-bar-wrap">';
 
-			echo '<div id="header-social-icons" class="social-icons-navigation clearfix">';
+			echo '<div id="header-bar" class="header-bar container clearfix">';
 
-			// Display Social Icons Menu.
-			wp_nav_menu( array(
-				'theme_location' => 'social',
-				'container' => false,
-				'menu_class' => 'social-icons-menu',
-				'echo' => true,
-				'fallback_cb' => '',
-				'link_before' => '<span class="screen-reader-text">',
-				'link_after' => '</span>',
-				'depth' => 1,
-				)
-			);
+			// Check if there is a social menu.
+			if ( has_nav_menu( 'social' ) ) {
+
+				echo '<div id="header-social-icons" class="social-icons-navigation clearfix">';
+
+				// Display Social Icons Menu.
+				wp_nav_menu( array(
+					'theme_location' => 'social',
+					'container' => false,
+					'menu_class' => 'social-icons-menu',
+					'echo' => true,
+					'fallback_cb' => '',
+					'link_before' => '<span class="screen-reader-text">',
+					'link_after' => '</span>',
+					'depth' => 1,
+					)
+				);
+
+				echo '</div>';
+
+			}
+
+			// Check if there is a top navigation menu.
+			if ( has_nav_menu( 'secondary' ) ) {
+
+				echo '<nav id="top-navigation" class="secondary-navigation navigation clearfix" role="navigation">';
+
+				// Display Top Navigation.
+				wp_nav_menu( array(
+					'theme_location' => 'secondary',
+					'container' => false,
+					'menu_class' => 'top-navigation-menu',
+					'echo' => true,
+					'fallback_cb' => '',
+					)
+				);
+
+				echo '</nav>';
+
+			}
 
 			echo '</div>';
-
+			echo '</div>';
 		}
-
-		// Check if there is a top navigation menu.
-		if ( has_nav_menu( 'secondary' ) ) {
-
-			echo '<nav id="top-navigation" class="secondary-navigation navigation clearfix" role="navigation">';
-
-			// Display Top Navigation.
-			wp_nav_menu( array(
-				'theme_location' => 'secondary',
-				'container' => false,
-				'menu_class' => 'top-navigation-menu',
-				'echo' => true,
-				'fallback_cb' => '',
-				)
-			);
-
-			echo '</nav>';
-
-		}
-
-		echo '</div>';
-
 	}
 
 	/**
